src/test/ui/error-codes/E0658.rs
#[repr(u128)]
enum Foo { //~ ERROR E0658
    Bar(u64),
}

fn main() {}
